2007-03-15  Albert Astals Cid <aacid@kde.org>

	* glib/Makefile.am: Make it build with BSD/Make. Patch by
	Henry Precheur <henry@precheur.org>

2007-03-07  Carlos Garcia Campos <carlosgc@gnome.org>
	reviewed by: Albert Astals Cid <aacid@kde.org>

        * poppler/Page.cc: Consider 0x0 boxes as invalid. Fixes
	http://bugzilla.gnome.org/show_bug.cgi?id=408682

2007-02-24  Albert Astals Cid <aacid@kde.org>
	* configure.ac: Change {datadir}/poppler to {datarootdir}/poppler so
	that i get /usr/local/share/poppler in config.h instead of
	${prefix}/poppler Better fixes are welcome.

2007-01-31  Albert Astals Cid <aacid@kde.org>

	* m4/qt.m4: Fix Qt4 detection on Mac. Patch by Benjamin Reed
	<ranger@befunk.com>

2007-01-28  Albert Astals Cid <aacid@kde.org>

	* glib/poppler-document.cc: Plug memory leak in poppler-document.
	Patch by Carlos Garcia Campos <carlosgc@gnome.org>
	* glib/poppler-page.cc: Make link mapping coordinates follow page
	rotation. Patch by Carlos Garcia Campos <carlosgc@gnome.org>
	* glib/poppler-action.cc: Fix link destination coordinates. Patch by
	Carlos Garcia Campos <carlosgc@gnome.org>

2007-01-11  Albert Astals Cid <aacid@kde.org>

	* goo/gmem.c: Merge change from xpdf-3.01pl2

2007-01-11  Albert Astals Cid <aacid@kde.org>

	* poppler/Catalog.h:
	* poppler/Catalog.cc: Limit max depth of recursive calls on
	readPageTree to fix MOAB-06-01-2007

2007-01-04  Albert Astals Cid <aacid@kde.org>

	* qt/poppler-page-transition.cc: Fix memory leak. Patch by
	Tobias Koenig <tokoe@kde.org>

2006-12-28  Albert Astals Cid <aacid@kde.org>

	* qt4/src/poppler-embeddedfile.cc:
	* qt4/src/poppler-document.cc:
	* qt/poppler-document.cc: Fix memory leaks.

2006-12-27  Albert Astals Cid <aacid@kde.org>

	* poppler/Catalog.h:
	* qt4/src/poppler-qt4.h: Remove , after last value of enum. Thanks to
	André Wöbbeking

2006-12-23  Albert Astals Cid <aacid@kde.org>

	* qt/poppler-page.cc: Fix memory leak in Page::textList. Patch by